# curso_python_2026

./: README.md  clase1_python.ipynb  pyproject.toml  rise_custom.css  slides_clase1_python.md
.ipynb_checkpoints/: old_clase1_python-checkpoint.ipynb
dia_1/: clase2.html  clase2.ipynb  computations.html  computations.ipynb  hello.html  hello.ipynb  practica_dia1.ipynb
dia_1/.ipynb_checkpoints/: clase1-checkpoint.html  clase1-checkpoint.ipynb  clase2-checkpoint.ipynb  practica_dia1-checkpoint.ipynb  practica_dia1_solucion-checkpoint.ipynb
dia_1/guias/: practica_dia1_solucion.ipynb
dia_1/test/: test_dia1.py
dia_2/: clase3.html  clase3.ipynb  clase4.html  clase4.ipynb  utilidades.py
dia_2/.ipynb_checkpoints/: clase3-checkpoint.ipynb
dia_2/guias/: guia_nb_dia2.ipynb  guia_nb_docente.ipynb
dia_2/guias/.ipynb_checkpoints/: guia_nb_dia2-checkpoint.ipynb  guia_nb_docente-checkpoint.ipynb
dia_2/test/: test_dia2.py
dia_3/: clase5.html  clase5_v2.html  clase5_v2.ipynb  clase6.html  clase6_v2.html  clase6_v2.ipynb
dia_3/.ipynb_checkpoints/: clase6_v1-checkpoint.ipynb
dia_3/guia/: guia_matplotlib.ipynb  guia_matplotlib_docente.ipynb  guia_nb_dia3.ipynb
dia_3/guia/.ipynb_checkpoints/: guia_nb_dia3-checkpoint.ipynb
dia_3/test/: test_dia3.py
dia_4/: clase7.html  clase7.ipynb  clase8.html  clase8.ipynb
dia_4/data/: mediciones.csv  ventas.csv
dia_4/guias/: guia_pandas-docente.ipynb  guia_pandas.ipynb
dia_4/guias/data/: geology_samples.csv  micro_growth.csv  summary_report.csv  survey.csv
dia_4/test/: test_dia4.py
(+1 files in other folders)
